styles.css
html {
	--paragraph-max-width: 800px;
}

/* Basic elements */

h1 {;
	margin: 0.5rem 0;
}

h2 {
	max-width: 832px;
	margin: 1em auto;
}
p,
ul {
	max-width: 800px;
	margin: 1em auto;
	font-size: 87.5%;
}

h2:first-child {
	margin-top: 0;
}
h2:last-child,
p:last-child,
ul:last-child,
figure:last-child {
	margin-bottom: 0;
}

a {
	color: inherit;
}
	a:active {
		opacity: 0.7;
	}


/* Layout */

html,
body {
	margin: 0;
	border: 0;
	padding: 0;
}

html {
	width: 100%;
	height: 100%;
	background-attachment: fixed;
	background-color: #014776;
	background-image: linear-gradient(145deg, rgba(1,36,58,1) 0%, rgba(1,82,135,1) 23%, rgba(1,71,118,1) 39%, rgba(1,82,135,1) 57%, rgba(0,0,0,1) 100%);
}

body {
	font-family: 'Roboto', 'Open Sans', sans-serif;
}

header {
	padding: 1em;
	
	background-color: white;
	color: rgba(0, 0, 0, 0.8);
	box-shadow: 0 2px 18px 0 rgba(0, 0, 0, 0.3);
}
	header h1 {
		font-size: 3em;
		color: black;
	}

section {
	padding: 2em 1em;
/*	padding: 1em calc(max(1em, (100% - 800px) / 2));*/
	margin: 2em 0;
	
	background-color: white;
	background-color: rgba(255, 255, 255, 0.8);
	color: black;
	box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.4);
}
@media (prefers-color-scheme: dark) {
	header {
		background-color: #080808;
		color: rgba(255, 255, 255, 0.8);
	}
		header h1 {
			color: white;
		}
	section {
		background-color: black;
		background-color: rgba(0, 0, 0, 0.7);
		color: white;
	}
}

footer {
	padding: 1em 0;
	font-size: 75%;
	text-align: center;
	
	color: white;
	text-shadow: 0 0 1em rgba(0, 0, 0, 0.75);
}


/* Components */

figure {
	text-align: center;
	margin: 2em 0;
}

.col2 {
	text-align: center;
}
@media (min-width: 800px) {
	.col2 > * {
		display: inline-block;
		width: 48%;
	}
}

.col2 img {
	max-width: 100%;
	vertical-align: top;
}

.img-pair {
	white-space: nowrap;
}
	.img-pair img {
		max-height: 320px;
		vertical-align: bottom;
	}
	.img-pair img.desktop {
		max-width: calc(1280 / 1664 * 100%);
		aspect-ratio: 1280 / 800;
	}
	.img-pair img.mobile {
		max-width: calc(384 / 1664 * 100%);
		aspect-ratio: 384 / 648;
	}

#top-video {
	position: relative;
	height: 512px;
	height: min(512px, 50vh);
	margin: 1em 0 -1em; /* To counter the top padding of the <section> below. */
}
	#top-video video {
		position: absolute;
		left: 50%;
		top: 50%;
		max-width: 100%;
		max-height: 100%;
		
		box-shadow: 0 2px 18px 0 rgba(0, 0, 0, 0.3);
		
		z-index: 1;
		
		transform-origin: center center;
		transform: translate(-50%, -50%);
		transition-duration: 0.2s;
		transition-property: transform, opacity;
	}
		#top-video video.hidden {
			opacity: 0;
			pointer-events: none;
		}
			#video-desktop.hidden {
				transform: translate(-50%, -50%) scaleX(0.5);
			}
			#video-mobile.hidden {
				transform: translate(-50%, -50%) scaleX(2);
			}

